--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "html-to-text": "^9.0.5",
     "nodemailer": "^6.9.7",
-    "nodemon": "^3.0.2",
-    "util": "^0.12.5"
+    "nodemon": "^3.0.2"
   }
 }
